# edu-json-parser

./: README.md
.github/workflows/: rust.yml
edu-json-parser/: Cargo.toml
edu-json-parser/benches/: canada.json  many.json  number_parsing_bench.rs  spoiled.json  test_bench.rs
edu-json-parser/examples/: sample2.rs  simple.rs  unsafe_lab.rs
edu-json-parser/src/: details.rs  errors.rs  lib.rs  stop_watch.rs  traits.rs
edu-json-parser/tests/: citm_catalog.json  fail01.json  fail02.json  fail03.json  fail04.json  fail05.json  fail06.json  fail07.json  fail08.json  fail09.json  fail10.json  fail11.json  fail12.json  fail13.json  fail14.json  fail15.json  fail16.json  fail17.json  fail18.json  fail19.json  fail20.json  fail21.json  fail22.json  fail23.json  fail24.json  fail25.json  fail26.json  fail27.json  fail28.json  fail29.json  fail30.json  fail31.json  fail32.json  fail33.json  jsoncpp_tests.rs  pass01.json  pass02.json  pass03.json  pass_01_decomopsited.rs  proof-of-concept-tests.rs  (+2 more)
