[package]
name = "edu-json-parser"
version = "0.1.0"
authors = ["madwareru <madware.ru@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
bench = false

[dependencies]
combine = "4.0.1"
compre_combinee = { git = "https://github.com/madwareru/compre_combinee", version = "0.1.4" }

[dev-dependencies]
criterion = "0.3"
json = "0.12.4"
serde_json = "1.0.48"

[[bench]]
name = "comparison_bench"
harness = false

[[bench]]
name = "number_parsing_bench"
harness = false